--- a/poker-be/package.json
+++ b/poker-be/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/socket.io": "^2.1.13",
+    "elrondjs": "^2.7.0",
     "express": "^4.17.1",
     "socket.io": "^4.0.1"
   },
