--- a/poker-be/package.json
+++ b/poker-be/package.json
@@ -18,10 +18,12 @@
     "@types/socket.io": "^2.1.13",
     "elrondjs": "^2.7.0",
     "express": "^4.17.1",
-    "socket.io": "^4.0.1"
+    "socket.io": "^4.0.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/uuid": "^8.3.0",
     "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
     "typescript": "^4.2.4"
