--- a/poker-fe/package.json
+++ b/poker-fe/package.json
@@ -22,6 +22,7 @@
     "rxjs": "~6.5.4",
     "socket.io-client": "^4.0.1",
     "tslib": "^1.10.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
