--- a/poker-fe/package.json
+++ b/poker-fe/package.json
@@ -30,10 +30,12 @@
     "@angular/cli": "~9.0.4",
     "@angular/compiler-cli": "~9.0.3",
     "@angular/language-service": "~9.0.3",
+    "@briebug/cypress-schematic": "^5.0.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
+    "cypress": "7.5.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~6.3.0",
@@ -42,7 +44,6 @@
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "~1.6.0",
     "karma-safari-launcher": "~1.0.0",
-    "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
     "typescript": "~3.7.5"
