--- a/poker-be/package.json
+++ b/poker-be/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "prestart": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --config nodemon.json src/index.ts",
+    "dev": "nodemon --config nodemon.dev.json src/index.ts",
+    "prod": "nodemon --config nodemon.prod.json src/index.ts",
     "dev:debug": "nodemon --config nodemon.json --inspect-brk src/index.ts"
   },
   "keywords": [],
