--- a/poker-be/package.json
+++ b/poker-be/package.json
@@ -7,7 +7,7 @@
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc",
     "prestart": "npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --require ts-node/register --watch --watch-files src, tests/**/*.ts",
     "dev": "nodemon --config nodemon.dev.json src/index.ts",
     "prod": "nodemon --config nodemon.prod.json src/index.ts",
     "dev:debug": "nodemon --config nodemon.json --inspect-brk src/index.ts"
@@ -24,7 +24,9 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/mocha": "^9.0.0",
     "@types/uuid": "^8.3.0",
+    "mocha": "^9.0.3",
     "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
     "typescript": "^4.2.4"
