--- a/poker-be/package.json
+++ b/poker-be/package.json
@@ -23,9 +23,11 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.21",
     "@types/express": "^4.17.11",
     "@types/mocha": "^9.0.0",
     "@types/uuid": "^8.3.0",
+    "chai": "^4.3.4",
     "mocha": "^9.0.3",
     "nodemon": "^2.0.12",
     "ts-node": "^9.1.1",
