--- a/poker-be/package.json
+++ b/poker-be/package.json
@@ -7,7 +7,7 @@
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc",
     "prestart": "npm run build",
-    "test": "mocha --require ts-node/register --watch --watch-files src, tests/**/*.ts",
+    "test": "mocha --require ts-node/register --watch --watch-files src, tests/**/*.test.ts",
     "dev": "nodemon --config nodemon.dev.json src/index.ts",
     "prod": "nodemon --config nodemon.prod.json src/index.ts",
     "dev:debug": "nodemon --config nodemon.json --inspect-brk src/index.ts"
