--- a/poker-fe/package.json
+++ b/poker-fe/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "dev": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "ng run poker-fe:cypress-open",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
